--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -32,6 +32,7 @@
         <a href="/resource-request" class="px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700">Request Resources</a>
         <a href="/manage-resource-request" class="px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700">Manage Resource Request</a>
         <a href="/talent-list" class="px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700">Manage Talent Application</a>
+        <a href="/talentPost-list" class="px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700">Manage Talent Post</a>
         <a href="/candidate-request" class="px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700">View Candidate' Application</a>
         <a href="/interview-request" class="px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700">Interview</a>
         <a href="/interview-list" class="px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700">Interview List</a>
