--- a/src/main/resources/templates/candidate/candidate-application-profile.html
+++ b/src/main/resources/templates/candidate/candidate-application-profile.html
@@ -38,7 +38,7 @@
 
 <!-- Requirements Section -->
 <div class="max-w-4xl mx-auto bg-gray-50 rounded-lg shadow-lg mt-8 p-8">
-    <h2 class="text-2xl font-semibold text-gray-900">Requirements</h2>
+    <h2 class="text-2xl font-semibold text-gray-900">experience</h2>
 
     <!-- Skills -->
     <h3 class="text-lg font-semibold text-gray-800 mt-4">Skills:</h3>
