--- a/src/main/resources/templates/talent-application/manage-talent-post.html
+++ b/src/main/resources/templates/talent-application/manage-talent-post.html
@@ -150,7 +150,7 @@
                                 <td class="px-4 py-2" th:text="${post.dueDate}"></td>
                                 <td class="px-4 py-2" th:text="${post.status}"></td>
                                 <td class="px-4 py-2">
-                                    <button class="px-3 py-1 bg-blue-500 text-white rounded hover:bg-blue-600">Edit</button>
+                                    <a th:href="@{/talentPost-form/update/{id}(id=${post.id})}" class="px-3 py-1 bg-blue-500 text-white rounded hover:bg-blue-600">Edit</a>
                                 </td>
                             </tr>
                             </tbody>
