Update jpnj logo image

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -12,7 +12,7 @@
         <header class="bg-white shadow-sm">
             <div class="max-w-7xl mx-auto px-4 py-2 sm:px-6 lg:px-8">
                 <div class="flex items-center">
-                    <img src="https://scontent-sin6-2.xx.fbcdn.net/v/t39.30808-6/328703162_1625433044574400_7944227844903868626_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=TcsfsEbUaiUQ7kNvgEE-JT2&_nc_zt=23&_nc_ht=scontent-sin6-2.xx&_nc_gid=Ak4toum7BO88jO36dIpckou&oh=00_AYD8Qc7NNM-7B0TU7NzYlIFV8zQn_eCTBjaNDJFAU9BbyA&oe=677D6864" alt="JPNJ Logo" class="h-16 mr-4">
+                    <img src="/images/jpnj-logo.jpg" alt="JPNJ Logo" class="h-16 mr-4">
                     <h1 class="text-xl font-bold text-gray-900">TVPSS Portal Johor State Education Department</h1>
                 </div>
             </div>
@@ -27,7 +27,7 @@
                         left: 0;
                         right: 0;
                         bottom: 0;
-                        background-image: url('https://scontent-sin11-1.xx.fbcdn.net/v/t39.30808-6/271938045_243867824562733_5222157470843042137_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=cc71e4&_nc_ohc=cqs3cgrh4rcQ7kNvgF-sZZ1&_nc_zt=23&_nc_ht=scontent-sin11-1.xx&_nc_gid=AV3YFxFSmJDRfMeq8s60zEh&oh=00_AYBwhENqJljCetF6IHUb5m7yXh3wKnHklJpstw9CCwcNjQ&oe=677D95FB');
+                        background-image: url('/images/jpnj-background.jpg');
                         background-size: cover;
                         background-position: center;
                         filter: blur(3px);
