--- a/src/main/resources/templates/dashboard/dashboard-officer.html
+++ b/src/main/resources/templates/dashboard/dashboard-officer.html
@@ -18,7 +18,7 @@
             <div class="flex h-16 items-center justify-between">
                 <!-- Left side -->
                 <div class="flex items-center">
-                    <img src="https://scontent-sin6-2.xx.fbcdn.net/v/t39.30808-6/328703162_1625433044574400_7944227844903868626_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=TcsfsEbUaiUQ7kNvgEE-JT2&_nc_zt=23&_nc_ht=scontent-sin6-2.xx&_nc_gid=Ak4toum7BO88jO36dIpckou&oh=00_AYD8Qc7NNM-7B0TU7NzYlIFV8zQn_eCTBjaNDJFAU9BbyA&oe=677D6864" 
+                    <img src="/images/jpnj-logo.jpg" 
                          alt="JPNJ Logo" 
                          class="h-8 w-auto">
                     <span class="ml-4 text-lg font-semibold text-gray-900">TVPSS Portal Johor State Education Department</span>
