student able to apply post, admin able to see candidate information

--- a/src/main/resources/templates/dashboard/dashboard-admin.html
+++ b/src/main/resources/templates/dashboard/dashboard-admin.html
@@ -117,7 +117,7 @@
                                     </div>
                                 </div>
                                 <div class="mt-6">
-                                    <a href="#" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-white bg-blue-600 hover:bg-blue-700">
+                                    <a href="/talentPostCandidate-list" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-white bg-blue-600 hover:bg-blue-700">
                                         View Candidates
                                     </a>
                                 </div>
@@ -189,6 +189,7 @@
                                 </div>
                             </div>
                         </div>
+                        
                     </div>
 
                     <!-- Candidate Applications Section -->
