--- a/src/main/resources/templates/dashboard/dashboard-student.html
+++ b/src/main/resources/templates/dashboard/dashboard-student.html
@@ -80,6 +80,13 @@
 
                         <a href="#" class="text-gray-600 hover:bg-gray-50 hover:text-gray-900 group flex items-center px-2 py-2 text-sm font-medium rounded-md">
                             <svg class="text-gray-400 group-hover:text-gray-500 mr-3 h-6 w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"/>
+                            </svg>
+                            Interview Schedule
+                        </a>
+
+                        <a href="#" class="text-gray-600 hover:bg-gray-50 hover:text-gray-900 group flex items-center px-2 py-2 text-sm font-medium rounded-md">
+                            <svg class="text-gray-400 group-hover:text-gray-500 mr-3 h-6 w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"/>
                             </svg>
                             My Profile
@@ -172,63 +179,63 @@
                     <div class="bg-white rounded-lg shadow-sm p-6 mb-6">
                         <div class="flex justify-between items-center mb-4">
                             <h2 class="text-lg font-medium text-gray-900">Talent Application</h2>
-                            <a href="/talentPost-list" class="text-sm text-blue-600 hover:text-blue-800">View All</a>
+                            <a href="/dashboard/student/talent-post/view-all" class="text-sm text-blue-600 hover:text-blue-800">View All</a>
                         </div>
                         <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
                             <!-- TVPSS Exhibition -->
-                            <div class="bg-white rounded-lg border border-gray-200 overflow-hidden">
+                            <div th:each="post : ${threetalentPostList}" class="bg-white rounded-lg border border-gray-200 overflow-hidden">
                                 <img src="https://static.vecteezy.com/system/resources/thumbnails/046/896/919/small/camera-andgraphs-lying-on-a-plain-surface-on-beautiful-background-top-view-photo.jpg"
                                      alt="TVPSS Exhibition"
                                      class="w-full h-48 object-cover">
                                 <div class="p-4">
-                                    <h3 class="font-medium text-gray-900">Video Grapher</h3>
-                                    <p class="mt-1 text-sm text-gray-500">Due: 2025-03-07</p>
+                                    <h3 class="font-medium text-gray-900" th:text="${post.talentName}"></h3>
+                                    <p class="mt-1 text-sm text-gray-500 " th:text="'Due: ' + ${post.dueDate}"></p>
                                     <div class="flex justify-between items-center mt-2 mb-3">
-                                        <span class="text-sm text-gray-600">Filming school events, student projects, and various segments fro the program.student projects, and various segments fro the program.student projects, and various segments fro the program.</span>
+                                        <span class="text-sm text-gray-600" th:text="${post.description}"></span>
                                         <span class="bg-blue-100 text-blue-800 text-xs font-semibold px-2.5 py-0.5 rounded-full">4.8</span>
                                     </div>
 <!--                                    <button class="w-full bg-blue-600 text-white py-2 rounded-md hover:bg-blue-700">-->
 <!--                                        Apply-->
 <!--                                    </button>-->
-                                    <button type="button" onclick="window.location.href='/talentPost-form'" class="w-full bg-blue-600 text-white py-2 rounded-md hover:bg-blue-700">Apply</button>
+                                    <a type="button" th:href="@{/dashboard/student/talent-post/apply/{id}(id=${post.id})}" class="w-full bg-blue-600 text-white py-2 rounded-md hover:bg-blue-700">Detail</a>
                                 </div>
                             </div>
 
-                            <!-- Photoshoot Competition -->
-                            <div class="bg-white rounded-lg border border-gray-200 overflow-hidden">
-                                <img src="https://www.roccoresearch.com/wp-content/uploads/2020/11/PHOTOGRAPHY-COMPETITION-scaled.jpg"
-                                     alt="Photoshoot Competition"
-                                     class="w-full h-48 object-cover">
-                                <div class="p-4">
-                                    <h3 class="font-medium text-gray-900">Photoshoot Competition</h3>
-                                    <p class="mt-1 text-sm text-gray-500">Aug 22 - Explore the world with another vision.</p>
-                                    <div class="flex justify-between items-center mt-2 mb-3">
-                                        <span class="text-sm text-gray-600">181 participants</span>
-                                        <span class="bg-blue-100 text-blue-800 text-xs font-semibold px-2.5 py-0.5 rounded-full">4.9</span>
-                                    </div>
-                                    <button class="w-full bg-blue-600 text-white py-2 rounded-md hover:bg-blue-700">
-                                        View Details
-                                    </button>
-                                </div>
-                            </div>
+<!--                            &lt;!&ndash; Photoshoot Competition &ndash;&gt;-->
+<!--                            <div class="bg-white rounded-lg border border-gray-200 overflow-hidden">-->
+<!--                                <img src="https://www.roccoresearch.com/wp-content/uploads/2020/11/PHOTOGRAPHY-COMPETITION-scaled.jpg"-->
+<!--                                     alt="Photoshoot Competition"-->
+<!--                                     class="w-full h-48 object-cover">-->
+<!--                                <div class="p-4">-->
+<!--                                    <h3 class="font-medium text-gray-900">Photoshoot Competition</h3>-->
+<!--                                    <p class="mt-1 text-sm text-gray-500">Aug 22 - Explore the world with another vision.</p>-->
+<!--                                    <div class="flex justify-between items-center mt-2 mb-3">-->
+<!--                                        <span class="text-sm text-gray-600">181 participants</span>-->
+<!--                                        <span class="bg-blue-100 text-blue-800 text-xs font-semibold px-2.5 py-0.5 rounded-full">4.9</span>-->
+<!--                                    </div>-->
+<!--                                    <button class="w-full bg-blue-600 text-white py-2 rounded-md hover:bg-blue-700">-->
+<!--                                        View Details-->
+<!--                                    </button>-->
+<!--                                </div>-->
+<!--                            </div>-->
 
-                            <!-- Film Webinar -->
-                            <div class="bg-white rounded-lg border border-gray-200 overflow-hidden">
-                                <img src="https://i.ytimg.com/vi/juXIYrY_Btk/maxresdefault.jpg"
-                                     alt="Film Webinar"
-                                     class="w-full h-48 object-cover">
-                                <div class="p-4">
-                                    <h3 class="font-medium text-gray-900">Film Webinar</h3>
-                                    <p class="mt-1 text-sm text-gray-500">Sept 23 - Join us to learn more about filming!</p>
-                                    <div class="flex justify-between items-center mt-2 mb-3">
-                                        <span class="text-sm text-gray-600">167 participants</span>
-                                        <span class="bg-blue-100 text-blue-800 text-xs font-semibold px-2.5 py-0.5 rounded-full">4.9</span>
-                                    </div>
-                                    <button class="w-full bg-blue-600 text-white py-2 rounded-md hover:bg-blue-700">
-                                        View Details
-                                    </button>
-                                </div>
-                            </div>
+<!--                            &lt;!&ndash; Film Webinar &ndash;&gt;-->
+<!--                            <div class="bg-white rounded-lg border border-gray-200 overflow-hidden">-->
+<!--                                <img src="https://i.ytimg.com/vi/juXIYrY_Btk/maxresdefault.jpg"-->
+<!--                                     alt="Film Webinar"-->
+<!--                                     class="w-full h-48 object-cover">-->
+<!--                                <div class="p-4">-->
+<!--                                    <h3 class="font-medium text-gray-900">Film Webinar</h3>-->
+<!--                                    <p class="mt-1 text-sm text-gray-500">Sept 23 - Join us to learn more about filming!</p>-->
+<!--                                    <div class="flex justify-between items-center mt-2 mb-3">-->
+<!--                                        <span class="text-sm text-gray-600">167 participants</span>-->
+<!--                                        <span class="bg-blue-100 text-blue-800 text-xs font-semibold px-2.5 py-0.5 rounded-full">4.9</span>-->
+<!--                                    </div>-->
+<!--                                    <button class="w-full bg-blue-600 text-white py-2 rounded-md hover:bg-blue-700">-->
+<!--                                        View Details-->
+<!--                                    </button>-->
+<!--                                </div>-->
+<!--                            </div>-->
                         </div>
                     </div>
 
